Feat(Game): added game functionality

--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
     <title>Roc-Paper-Scissor</title>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
-    <script type="text/javascript" src="./script.js" charset="utf-8"></script>
   </head>
 
   <body>
@@ -31,10 +30,10 @@
           <div class="box">
             <h2>Computer Choice:</h2>
             <p id="computer-choice">
-              <span>R</span>
+              <!-- <span>R</span>
               <span>o</span>
               <span>c</span>
-              <span>k</span>
+              <span>k</span> -->
             </p>
           </div>
         </div>
@@ -52,18 +51,17 @@
               <div class="arrow"><span>&#8680;</span></div>
               <div class="button" id="Paper">Paper</div>
               <div class="button" id="Rock">Rock</div>
-              <div class="button" id="Scissor">Scissor</div>
+              <div class="button" id="Scissors">Scissors</div>
             </div>
           </div>
         </div>
       </section>
       <section class="result">
         <h2>Result:</h2>
-        <p id="game-result">
-
-        </p>
+        <p id="game-result"></p>
       </section>
     </main>
     <footer></footer>
   </body>
+  <script type="text/javascript" src="./script.js" charset="utf-8"></script>
 </html>
